# krabster

./: .dockerignore  .editorconfig  Cargo.toml  README.md  docker-compose.yaml  dockerfile
src/: main.rs
src/configuration/: base.rs  database.rs  mod.rs  providers.rs  server.rs
src/downloader/: base.rs  youtube.rs
